adjust the inherit relation among JSONBase, JSONObject and JSONArray

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,12 +125,16 @@ endif( WIN32 )
 set(GAME_SRC
   Classes/AppDelegate.cpp
   Classes/MainListScene.cpp
+  Classes/JSONParserTestScene.cpp
+  Classes/parser/JSONParser.cpp
   ${PLATFORM_SPECIFIC_SRC}
 )
 
 set(GAME_HEADERS
   Classes/AppDelegate.h
   Classes/MainListScene.h
+  Classes/JSONParserTestScene.h
+  Classes/parser/JSONParser.h
   ${PLATFORM_SPECIFIC_HEADERS}
 )
 
