--- a/proj.android/.project
+++ b/proj.android/.project
@@ -58,6 +58,11 @@
 			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/Classes</locationURI>
 		</link>
 		<link>
+			<name>Resources</name>
+			<type>2</type>
+			<location>/home/alex/Develop/Cocos2dx/cocos2d-x-tools/Resources</location>
+		</link>
+		<link>
 			<name>cocos2d</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-1-PROJECT_LOC%7D/cocos2d</locationURI>
